MCR-3264 Enable PMD rule AvoidDuplicateLiterals (#2401)
* MCR-3264 Enable PMD rule AvoidDuplicateLiterals

* MCR-3264 fix issues

* MCR-3264 fix use of default locale

* MCR-3264 minor changes

* MCR-3264 fix small issues

* MCR-3264 use properties instead of enums